logo v-alignment fix
fix logo

--- a/web/less/logo-image.less
+++ b/web/less/logo-image.less
@@ -1,3 +1,4 @@
 .logoImage {
     height: 100%;
+    vertical-align: bottom;
 }
