--- a/web/less/nav-bar-logo.less
+++ b/web/less/nav-bar-logo.less
@@ -15,7 +15,6 @@
 }
 
 .navBarLogoText {
-    position: absolute;
     display: inline-block;
     margin-left: 15px;
 }
